--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,10 @@ img{
     width: 50%;
     max-width: 1283px;
     margin: auto;
-    position: relative;
+    position: fixed;
     top: 50%;
+    left: 0;
+    right: 0;
     @include translateY(-75%);
+    -webkit-touch-callout: none;
 }
