--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,7 +10,7 @@ html{
 img{
     display: block;
     width: 50%;
-    max-width: 1283px;
+    max-width: 1283px; // This is the size of the logo image. Change this if the logo changes
     margin: auto;
     position: fixed;
     top: 50%;
