--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,5 @@
 // Variables
 
-// Restated Bootstrap Variables
-
 $white: #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
@@ -11,7 +9,9 @@ $gray-500: #adb5bd !default;
 $gray-600: #868e96 !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
-$gray-900: #212529 !default;
+$gray-900: #94b9a8  !default;
 $black: #000 !default;
 
+// JCN variables
 $primary: #fed136 !default;
+$secondary:  #94b9a8 !default; 
