--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -1,6 +1,9 @@
 // Styling for the navbar
 #mainNav {
   background-color: $gray-900;
+  img {
+    height: 30px;
+  }
   .navbar-toggler {
     font-size: 12px;
     right: 0;
